2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the menu bar from the glade file
	* src/ui/ui-main.c: (ui_main_new): don't hide the menubar anymore,
	it's gone (Maemo); don't destroy() the menubar anymore, it's gone (for
	GNOME)

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item),
	(ui_main_game_changed): use a menu bar generated by GtkUIManager, not
	by glade

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* data/monkey-bubble.glade: dropped the unused game menu

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (ui_main_enabled_games_item): use
	the generated menu

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): fix the last commit

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new), (game_pause_cb),
	(game_resume_cb), (pause_game): added callbacks for the new GtkActions

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added a "Game" action to work
	around bug http://bugzilla.gnome.org/show_bug.cgi?id=515017

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set the state of the game-related
	items earlier

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): set the accelerator paths for the
	GtkActions properly

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): fixed a typo

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_enabled_games_item),
	(ui_main_game_changed): update the visibility and GamePause and
	GameResume properly, as well as the sensitivity of GamePause and
	GameStop

2008-02-07  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added labels and stock icons to
	GNOME's main menu

2008-02-07  Sven Herzberg  <sven@imendio.com>
