@@ -1,5 +1,10 @@
 2008-02-08  Sven Herzberg  <sven@imendio.com>
 
+	* src/ui/ui-main.c: (ui_main_new): replace the glade-generated vbox by
+	a manually created one (for GNOME)
+
+2008-02-08  Sven Herzberg  <sven@imendio.com>
+
 	* data/monkey-bubble.glade: dropped the menu bar from the glade file
 	* src/ui/ui-main.c: (ui_main_new): don't hide the menubar anymore,
 	it's gone (Maemo); don't destroy() the menubar anymore, it's gone (for
